--- a/Sources/Application/LaunchScreen.storyboard
+++ b/Sources/Application/LaunchScreen.storyboard
@@ -20,12 +20,24 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fox-icon" translatesAutoresizingMaskIntoConstraints="NO" id="kYY-uL-iU0">
+                                <rect key="frame" x="102.5" y="248.5" width="170" height="170"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="0.60392156862745094" blue="0.23529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="kYY-uL-iU0" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="jnN-aK-CzS"/>
+                            <constraint firstItem="kYY-uL-iU0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="tks-3z-Tg5"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="fox-icon" width="170" height="170"/>
+    </resources>
 </document>
